--- a/MyTrips/MyTrips.csproj
+++ b/MyTrips/MyTrips.csproj
@@ -31,6 +31,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Classes\LoginClass.cs" />
     <Compile Include="Classes\Trip.cs" />
+    <Compile Include="Classes\DbHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Classes\" />
