--- a/Droid/MyTrips.Droid.csproj
+++ b/Droid/MyTrips.Droid.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="NewTripActivity.cs" />
+    <Compile Include="ListTripsActivity.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -88,6 +89,16 @@
     <AndroidResource Include="Resources\mipmap-xxhdpi\Icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\Icon.png" />
     <AndroidResource Include="Resources\layout\NewTrip.axml" />
+    <AndroidResource Include="Resources\layout\ListTrips.axml" />
+    <AndroidResource Include="Resources\mipmap-xxxhdpi\ic_add.png" />
+    <AndroidResource Include="Resources\mipmap-xxhdpi\ic_add.png" />
+    <AndroidResource Include="Resources\mipmap-xhdpi\ic_add.png" />
+    <AndroidResource Include="Resources\mipmap-mdpi\ic_add.png" />
+    <AndroidResource Include="Resources\mipmap-hdpi\ic_add.png" />
+    <AndroidResource Include="Resources\menu\Add.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Resources\menu\" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
