--- a/iOS/MyTrips.iOS.csproj
+++ b/iOS/MyTrips.iOS.csproj
@@ -96,6 +96,9 @@
     <Reference Include="SQLite-net">
       <HintPath>..\packages\sqlite-net-pcl.1.4.118\lib\netstandard1.1\SQLite-net.dll</HintPath>
     </Reference>
+    <Reference Include="Toast">
+      <HintPath>..\packages\Toast.iOS.1.0.0\lib\xamarinios10\Toast.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MyTrips\MyTrips.csproj">
@@ -125,6 +128,14 @@
     <Compile Include="ViewController.cs" />
     <Compile Include="ViewController.designer.cs">
       <DependentUpon>ViewController.cs</DependentUpon>
+    </Compile>
+    <Compile Include="NewTripViewController.cs" />
+    <Compile Include="NewTripViewController.designer.cs">
+      <DependentUpon>NewTripViewController.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ListTripsViewController.cs" />
+    <Compile Include="ListTripsViewController.designer.cs">
+      <DependentUpon>ListTripsViewController.cs</DependentUpon>
     </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
