--- a/iOS/packages.config
+++ b/iOS/packages.config
@@ -4,4 +4,5 @@
   <package id="SQLitePCLRaw.bundle_green" version="1.1.5" targetFramework="xamarinios10" />
   <package id="SQLitePCLRaw.core" version="1.1.5" targetFramework="xamarinios10" />
   <package id="SQLitePCLRaw.provider.sqlite3.ios_unified" version="1.1.5" targetFramework="xamarinios10" />
+  <package id="Toast.iOS" version="1.0.0" targetFramework="xamarinios10" />
 </packages>
