--- a/iOS/packages.config
+++ b/iOS/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="xamarinios10" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="xamarinios10" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="xamarinios10" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="xamarinios10" />
   <package id="sqlite-net-pcl" version="1.4.118" targetFramework="xamarinios10" />
   <package id="SQLitePCLRaw.bundle_green" version="1.1.5" targetFramework="xamarinios10" />
   <package id="SQLitePCLRaw.core" version="1.1.5" targetFramework="xamarinios10" />
