Change name to venues

--- a/MyTrips/MyTrips.csproj
+++ b/MyTrips/MyTrips.csproj
@@ -34,7 +34,7 @@
     <Compile Include="Classes\DbHelper.cs" />
     <Compile Include="Classes\Helpers\Constants.cs" />
     <Compile Include="Classes\Categories.cs" />
-    <Compile Include="Classes\SearchResult.cs" />
+    <Compile Include="Classes\Venues.cs" />
     <Compile Include="Classes\Helpers\Foursquare.cs" />
   </ItemGroup>
   <ItemGroup>
