--- a/iOS/MyTrips.iOS.csproj
+++ b/iOS/MyTrips.iOS.csproj
@@ -146,6 +146,14 @@
     <Compile Include="ListTripsViewController.designer.cs">
       <DependentUpon>ListTripsViewController.cs</DependentUpon>
     </Compile>
+    <Compile Include="newPlacesViewController_.cs" />
+    <Compile Include="newPlacesViewController_.designer.cs">
+      <DependentUpon>newPlacesViewController_.cs</DependentUpon>
+    </Compile>
+    <Compile Include="addNewPlaceViewController.cs" />
+    <Compile Include="addNewPlaceViewController.designer.cs">
+      <DependentUpon>addNewPlaceViewController.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" />
