--- a/Droid/packages.config
+++ b/Droid/packages.config
@@ -9,4 +9,15 @@
   <package id="SQLitePCLRaw.core" version="1.1.10" targetFramework="monoandroid81" />
   <package id="SQLitePCLRaw.lib.e_sqlite3.android" version="1.1.10" targetFramework="monoandroid81" />
   <package id="SQLitePCLRaw.provider.e_sqlite3.android" version="1.1.10" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Annotations" version="26.0.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Compat" version="26.0.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Core.UI" version="26.0.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Core.Utils" version="26.0.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Fragment" version="26.0.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Media.Compat" version="26.0.2" targetFramework="monoandroid81" />
+  <package id="Xamarin.Build.Download" version="0.4.9" targetFramework="monoandroid81" />
+  <package id="Xamarin.GooglePlayServices.Base" version="60.1142.1" targetFramework="monoandroid81" />
+  <package id="Xamarin.GooglePlayServices.Basement" version="60.1142.1" targetFramework="monoandroid81" />
+  <package id="Xamarin.GooglePlayServices.Maps" version="60.1142.1" targetFramework="monoandroid81" />
+  <package id="Xamarin.GooglePlayServices.Tasks" version="60.1142.1" targetFramework="monoandroid81" />
 </packages>
