--- a/Droid/Properties/AndroidManifest.xml
+++ b/Droid/Properties/AndroidManifest.xml
@@ -11,7 +11,7 @@
 	<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
 	<uses-feature android:glEsVersion="0x00020000" android:required="true"></uses-feature>
 	<application android:label="MyTrips" android:theme="@style/AppTheme" android:icon="@mipmap/icon">
-		<!--        <meta-data android:name="com.google.android.maps.v2.API_KEY" android.value="@string/GoogleMapsAPI"/>-->
-		<!--        <meta-data android:name="com.google.android.gms.version" android.value="@integer/google_play_services_version"/>-->
+        <meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="@string/GoogleMapsAPI"/>
+        <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version"/>
 	</application>
 </manifest>
